--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"dependencies": {
 		"classnames": "^2.5.1",
-		"framer-motion": "^11.15.0",
+		"motion": "^11.15.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
 	},
