--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -38,6 +38,7 @@ jobs:
     needs: build
     permissions:
       id-token: write
+      pages: write
     steps:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
