--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"classnames": "^2.5.1",
 		"motion": "^11.15.0",
 		"react": "^19.0.0",
+		"react-confetti": "^6.2.2",
 		"react-dom": "^19.0.0"
 	},
 	"devDependencies": {
